<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/layout_delete_drawing_modal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/frame_skybluelight_rounded_border_black_radius50"
    android:paddingTop="@dimen/_12sdp"
    android:paddingBottom="@dimen/_10sdp"
    android:paddingLeft="@dimen/_10sdp"
    android:paddingRight="@dimen/_10sdp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/text_alert_title"
        style="@style/Theme.AppCompat.TextView.jua.dark.Size16"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/delete_drawing"
        android:gravity="center"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_alert_title"
        android:layout_marginTop="@dimen/_5sdp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_delete"
            style="@style/Theme.AppCompat.TextView.jua.dark.Size14"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/button_frame_skyblue"
            android:text="@string/delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_cancel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.45" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_cancel"
            style="@style/Theme.AppCompat.TextView.jua.dark.Size14"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/button_frame_skyblue"
            android:text="@string/button_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/button_report"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.45" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>